--- a/Rewrites/MyBlockAds.conf
+++ b/Rewrites/MyBlockAds.conf
@@ -1,5 +1,5 @@
 # utf-8
-# 2022-07-13 16:12
+# 2022-07-13 18:54
 # 对【哔哩哔哩、微博、油管、知乎】的开屏广告和应用内广告进行处理，是对【AdvertisingLite.conf】的去重和补充
 
 # 引用地址 https://github.com/ddgksf2013/Cuttlefish/blob/master/Rewrite/MyAdRule.conf
@@ -47,7 +47,7 @@
 ^https?:\/\/ad\.12306\.cn\?.* url reject
 
 # 小红书开屏广告 //edith.xiaohongshu.com
-^https?:\/\/edith\.xiaohongshu\.com\/api\/sns\/v2\/system_service\/splash_config url script-response-body https://raw.githubusercontent.com/RuCu6/QuanX/main/Scripts/xiaohongshu_launch.js
+^https?:\/\/edith\.xiaohongshu\.com\/api\/sns\/v\d\/system_service\/splash_config url script-response-body https://raw.githubusercontent.com/RuCu6/QuanX/main/Scripts/xiaohongshu_launch.js
 
 # 微信
 ## 去除公众号广告 //mp.weixin.qq.com
@@ -69,28 +69,28 @@
 ## 观影页面去广告 //api.bilibili.com, api.biliapi.net
 ^https?:\/\/api\.(bilibili|biliapi)\.(com|net)\/pgc\/page\/cinema\/tab\? url script-response-body https://raw.githubusercontent.com/RuCu6/QuanX/main/Scripts/BiliBili/bilibili_diy.js
 ## 应用开屏去广告 //app.bilibili.com
-^https://app.bilibili.com/x/v2/splash/show url reject-dict
+^https?:\/\/app\.bilibili\.com\/x\/v\d\/splash\/show url reject-dict
 ## 应用开屏广告预加载 //app.bilibili.com
-^https:\/\/app\.bilibili\.com\/x\/v2\/splash\/list url script-response-body https://raw.githubusercontent.com/RuCu6/QuanX/main/Scripts/BiliBili/bilibili_diy.js
+^https:\/\/app\.bilibili\.com\/x\/v\d\/splash\/list url script-response-body https://raw.githubusercontent.com/RuCu6/QuanX/main/Scripts/BiliBili/bilibili_diy.js
 ## 去除统一设置的皮肤 //app.bilibili.com
 ^https?:\/\/app\.bilibili\.com\/x\/resource\/show\/skin\? url script-response-body https://raw.githubusercontent.com/RuCu6/QuanX/main/Scripts/BiliBili/bilibili_diy.js
 ## 1080P高码率+4K画质(番剧和影视除外) //app.bilibili.com
-^https?:\/\/app\.bilibili\.com\/x\/v2\/account\/myinfo\? url script-response-body https://raw.githubusercontent.com/RuCu6/QuanX/main/Scripts/BiliBili/bilibili_diy.js
+^https?:\/\/app\.bilibili\.com\/x\/v\d\/account\/myinfo\? url script-response-body https://raw.githubusercontent.com/RuCu6/QuanX/main/Scripts/BiliBili/bilibili_diy.js
 ## 热搜发现 //app.bilibili.com
-^https://app.bilibili.com/x/v2/search/square url script-response-body https://raw.githubusercontent.com/RuCu6/QuanX/main/Scripts/BiliBili/bilibili_diy.js
+^https?:\/\/app\.bilibili\.com\/x\/v\d\/search\/square url script-response-body https://raw.githubusercontent.com/RuCu6/QuanX/main/Scripts/BiliBili/bilibili_diy.js
 ## Defaultword //app.bilibili.com
-^https://app.bilibili.com/x/v2/search/defaultwords url reject-dict
+^https?:\/\/app\.bilibili\.com\/x\/v\d\/search\/defaultwords url reject-dict
 ## Material_Ad //api.bilibili.com
 ^https?:\/\/api\.bilibili\.com\/x\/vip\/ads\/material\/report url reject-dict
 ## 小卡片广告 //api.bilibili.com
-^https://api.bilibili.com/pgc/season/player/cards url reject-dict
+^https?:\/\/api\.bilibili\.com\/pgc\/season\/player\/cards url reject-dict
 ## 解除SIM卡地区限制 //app.biliintl.com
 ;(^https?:\/\/app\.biliintl.com\/intl\/.+)(&sim_code=\d+)(.+) url 302 $1$3
 (^https?://app\.biliintl\.com/(x/)?(intl|dm|reply|history|v\d/(fav|msgfeed)).+?)(&s_locale=zh-Hans_[A-Z]{2})(.+?)(&sim_code=\d+)(.+) url 302 $1&s_locale=zh-Hans_PH$6&sim_code=51503$8
 ## 解除短信登录限制 //passport.biliintl.com, app.biliintl.com
-^https?://passport\.biliintl\.com/x/intl/passport-login/(sms/send|reg/sms|oauth2/access_token|login/sms) url script-request-body https://raw.githubusercontent.com/RuCu6/QuanX/main/Scripts/BiliBili/bilibili_bstar.js
-(^https?://passport\.biliintl\.com/x/intl/passport-login/.+)(&s_locale=zh-Hans_[A-Z]{2})(.+)(&sim_code=\d+)(.+) url 302 $1&s_locale=zh-Hans_PH$35&sim_code=51503$5
-^https?://app\.biliintl\.com/(intl/gateway/v\d/app/data/report/heartbeat/mobile|x/(history|reply)/v\d/add) url script-request-body https://raw.githubusercontent.com/RuCu6/QuanX/main/Scripts/BiliBili/bilibili_bstar.js
+^https?:\/\/passport\.biliintl\.com\/x\/intl\/passport-login\/(sms\/send|reg\/sms|oauth\d\/access_token|login\/sms) url script-request-body https://raw.githubusercontent.com/RuCu6/QuanX/main/Scripts/BiliBili/bilibili_bstar.js
+(^https?:\/\/passport\.biliintl\.com\/x\/intl\/passport-login\/.+)(&s_locale=zh-Hans_[A-Z]{2})(.+)(&sim_code=\d+)(.+) url 302 $1&s_locale=zh-Hans_PH$35&sim_code=51503$5
+^https?:\/\/app\.biliintl\.com/(intl\/gateway\/v\d\/app\/data\/report\/heartbeat\/mobile|x\/(history|reply)\/v\d\/add) url script-request-body https://raw.githubusercontent.com/RuCu6/QuanX/main/Scripts/BiliBili/bilibili_bstar.js
 ## 去除搜索中的大家都在搜 //api.vc.bilibili.com
 ^https?:\/\/api\.vc\.bilibili\.com\/search_svr\/v\d\/Search\/recommend_words url reject
 ## 去除动态中的话题 //api.vc.bilibili.com
@@ -100,7 +100,7 @@
 ## 漫画去广告 //manga.bilibili.com
 ^https?:\/\/manga\.bilibili\.com\/twirp\/comic\.v\d\.Comic\/(Flash|ListFlash) url reject-dict
 ## 推荐去广告 //app.bilibili.com
-^https?:\/\/app\.bilibili\.com\/x\/v2\/feed\/index url script-response-body https://raw.githubusercontent.com/RuCu6/QuanX/main/Scripts/BiliBili/bilibili_diy.js
+^https?:\/\/app\.bilibili\.com\/x\/v\d\/feed\/index url script-response-body https://raw.githubusercontent.com/RuCu6/QuanX/main/Scripts/BiliBili/bilibili_diy.js
 ## 追番去广告 //api.bilibili.com, api.biliapi.net
 ^https?:\/\/api\.(bilibili|biliapi)\.(com|net)\/pgc\/page\/bangumi url script-response-body https://raw.githubusercontent.com/RuCu6/QuanX/main/Scripts/BiliBili/bilibili_diy.js
 ## 直播去广告 //api.live.bilibili.com
@@ -110,9 +110,9 @@
 ## 标签页处理 //app.bilibili.com
 ^https?:\/\/app\.bilibili\.com\/x\/resource\/show\/tab url script-response-body https://raw.githubusercontent.com/RuCu6/QuanX/main/Scripts/BiliBili/bilibili_diy.js
 ## 我的页面处理 //app.bilibili.com
-^https?:\/\/app\.bilibili\.com\/x\/v2\/account\/mine url script-response-body https://raw.githubusercontent.com/RuCu6/QuanX/main/Scripts/BiliBili/bilibili_diy.js
+^https?:\/\/app\.bilibili\.com\/x\/v\d\/account\/mine url script-response-body https://raw.githubusercontent.com/RuCu6/QuanX/main/Scripts/BiliBili/bilibili_diy.js
 ## proto去广告 //app.bilibili.com
-^https:\/\/app\.bilibili\.com\/bilibili\.app\.(view\.v1\.View\/View|dynamic\.v2\.Dynamic\/DynAll)$ url script-response-body https://raw.githubusercontent.com/RuCu6/QuanX/main/Scripts/BiliBili/bilibili_proto.js
+^https:\/\/app\.bilibili\.com\/bilibili\.app\.(view\.v1\.View\/View|dynamic\.v\d\.Dynamic\/DynAll)$ url script-response-body https://raw.githubusercontent.com/RuCu6/QuanX/main/Scripts/BiliBili/bilibili_proto.js
 
 # 微博 //*.uve.weibo.com, api.weibo.cn, mapi.weibo.com, vip.storage.weibo.com
 ## 去除开屏广告 //*.uve.weibo.com
@@ -153,13 +153,13 @@
 ## 知乎评论去广告 //api.zhihu.com
 ^https?:\/\/api\.zhihu\.com\/(comment_v5\/)?(answers|comments?|articles|pins)\/\d+\/(root_|child_)?comments? url script-response-body https://raw.githubusercontent.com/RuCu6/QuanX/main/Scripts/zhihu.js
 ## 知乎回答列表去广告 //www.zhihu.com
-^https?:\/\/www\.zhihu\.com\/appview\/v2\/answer\/.*(entry=(?!(preload-topstory|preload-search|preload-subscription)))? url script-response-body https://raw.githubusercontent.com/RuCu6/QuanX/main/Scripts/zhihu.js
+^https?:\/\/www\.zhihu\.com\/appview\/v\d\/answer\/.*(entry=(?!(preload-topstory|preload-search|preload-subscription)))? url script-response-body https://raw.githubusercontent.com/RuCu6/QuanX/main/Scripts/zhihu.js
 ## 知乎屏蔽关键词解锁 //api.zhihu.com
 ^https?:\/\/api\.zhihu\.com\/feed-root\/block url script-analyze-echo-response https://raw.githubusercontent.com/RuCu6/QuanX/main/Scripts/zhihu.js
 ## 知乎8.3.0移除推荐页顶部项 //api.zhihu.com
-^https?:\/\/api\.zhihu\.com\/feed-root\/sections\/query\/v2 url script-response-body https://raw.githubusercontent.com/RuCu6/QuanX/main/Scripts/zhihu.js
+^https?:\/\/api\.zhihu\.com\/feed-root\/sections\/query\/v\d url script-response-body https://raw.githubusercontent.com/RuCu6/QuanX/main/Scripts/zhihu.js
 ## 拦截知乎开屏广告 //api.zhihu.com
-^https?:\/\/api\.zhihu\.com\/commercial_api\/launch_v2\? url reject-dict
+^https?:\/\/api\.zhihu\.com\/commercial_api\/launch_v\d\? url reject-dict
 ## 知乎去除最常访问 //api.zhihu.com
 ^https?:\/\/api\.zhihu\.com\/moments\/recent url reject-dict
 ## 知乎去除回答下的广告 //www.zhihu.com
@@ -167,7 +167,7 @@
 ## 知乎其他广告拦截 //api.zhihu.com
 ^https?:\/\/api\.zhihu\.com\/(notifications\/v\d\/count|v\d\/package|me\/guides|drama\/living-info|ad|fringe|commercial|market\/popovers|.*featured-comment-ad|ad-style-service) url reject-dict
 ## 知乎拦截部分预加载 //www.zhihu.com
-;^https?:\/\/www\.zhihu\.com\/appview\/(p|v2\/answer|zvideo)\/.*entry=(preload-topstory|preload-search|preload-subscription) url reject-dict
+;^https?:\/\/www\.zhihu\.com\/appview\/(p|v\d\/answer|zvideo)\/.*entry=(preload-topstory|preload-search|preload-subscription) url reject-dict
 ## 知乎网页版去广告 //www.zhihu.com, zhuanlan.zhihu.com
 ^https?:\/\/www\.zhihu\.com\/api\/v4/(questions|anwsers)\/\d+/related-readings url reject-dict
 ^https?:\/\/www\.zhihu\.com\/api\/v4\/hot_recommendation url reject-dict
@@ -183,7 +183,7 @@
 ## 屏蔽知乎“我的”页面推荐开通会员的卡片 //api.zhihu.com
 ^https?:\/\/api\.zhihu\.com\/people\/self\/new_user_card url reject-200
 ## 知乎去除Tab页关注人头像 //api.zhihu.com
-^https?:\/\/api\.zhihu\.com\/moments\/tab_v2 url reject-dict
+^https?:\/\/api\.zhihu\.com\/moments\/tab_v\d url reject-dict
 ## 屏蔽知乎8.3.0版本首页顶部的视频角标 //api.zhihu.com
 ^https?:\/\/api\.zhihu\.com\/explore\/entry\/tips url reject
 ## 屏蔽网页版强制登陆弹窗 //static.zhihu.com
