--- a/Rewrites/MediaPage.conf
+++ b/Rewrites/MediaPage.conf
@@ -1,13 +1,36 @@
 # utf-8
-# 2022-07-13 11:16
-# 引用地址 https://github.com/ddgksf2013/Cuttlefish/blob/master/Html/WebAdBlock.conf
+# 2022-07-13 21:14
 # 引用地址 https://github.com/limbopro/Adblock4limbo/blob/main/Adblock4limbo.conf
+# 引用地址 https://github.com/ddgksf2013/Cuttlefish/blob/master/Html/WebAdBlock.conf
+
+# 剧迷网 (https://gimy.app/, https://gimytv.app/) //*.gimy.*
+^https?:\/\/(\w{0,3}(\.){0,1}(gimy|gimytv)(\.)\w{0,3})(?!.*?(/(cdn-cgi)))(?!.*?(\.(css|js|jpeg|jpg|png|php|gif|ico|mp3|mp4|svg|tff|PNG|woff|woff2|m3u8))).* url script-response-body https://raw.githubusercontent.com/limbopro/Adblock4limbo/main/Adguard/Limbo/gimy_qx.js
+
+# 低端影视 (https://ddrk.me/) //ddrk.me
+^https?:\/\/(\w{0,3}(\.){0,1}(ddrk)(\.)\w{0,3})(?!.*?(\.webmanifest|/(cdn-cgi)))(?!.*?(\.(css|js|jpeg|jpg|png|php|gif|ico|mp3|mp4|svg|tff|PNG|woff|woff2|m3u8))).* url script-response-body https://raw.githubusercontent.com/RuCu6/QuanX/main/Scripts/Limbo/Adblock4limbo_qx.js
+
+# 哔嘀影视 (https://www.btbdys.com/) //*.btbdys.*
+# 哔嘀影视播放页 (www.btbdys.com)
+^https?:\/\/(\w{0,3}(\.){0,1}(btbdys)(\.)\w{0,3})\/play\/.*?\.htm.* url script-response-body https://raw.githubusercontent.com/RuCu6/QuanX/main/Scripts/Limbo/Adblock4limbo_qx.js
+# 哔嘀影视展示页 (www.btbdys.com)
+^https?:\/\/(\w{0,3}(\.){0,1}(btbdys)(\.)\w{0,3})(?!.*?(/(cdn-cgi|verifyCode|member\/|zzzzz)))(?!.*?(\.(css|js|jpeg|jpg|png|php|gif|ico|mp3|mp4|svg|tff|PNG|woff|woff2|m3u8|ddr))).* url script-response-body https://raw.githubusercontent.com/RuCu6/QuanX/main/Scripts/Limbo/Adblock4limbo_qx.js
+
+# 独播库 (www.duboku.tv) //*.duboku.*
+^https?:\/\/(\w{0,3}(\.){0,1}(duboku)(\.)\w{0,3})(?!.*?(/(cdn-cgi)))(?!.*?(\.(css|js|jpeg|jpg|png|php|gif|ico|mp3|mp4|svg|tff|PNG|woff|woff2|m3u8))).* url script-response-body https://raw.githubusercontent.com/limbopro/Adblock4limbo/main/Adguard/Limbo/duboku_qx.js
+
+# 韩剧 TV (https://www.tvn.cc) //*.tvn.cc
+www.tvn.cc url 302 m.tvn.cc
+https://js.tvn.cc/static/cfo.min.js url echo-response * echo-response https://raw.githubusercontent.com/limbopro/Adblock4limbo/main/Adguard/Limbo/tvn.cfo.min.js
+^https?:\/\/(\w{0,3}(\.){0,1}(tvn)(\.)\w{0,3})(?!.*?(/(cdn-cgi)))(?!.*?(\.(css|js|jpeg|jpg|png|php|gif|ico|mp3|mp4|svg|tff|PNG|woff|woff2|m3u8))).* url script-response-body https://raw.githubusercontent.com/limbopro/Adblock4limbo/main/Adguard/Limbo/surge_tvn.js
+
+# 梨播 libvio (https://www.libvio.com/, https://www.libvio.me) //www.libvio.com, www.libvio.me
+^https?:\/\/(\w{0,3}(\.){0,1}(libvio)(\.)\w{0,3})(?!.*?(/(cdn-cgi)))(?!.*?(\.(css|js|jpeg|jpg|png|php|gif|ico|mp3|mp4|svg|tff|PNG|woff|woff2|m3u8))).* url script-response-body https://raw.githubusercontent.com/limbopro/Adblock4limbo/main/Adguard/Limbo/libvio_qx.js
+
+# 天天视频 (www.ttsp.tv) //www.ttsp.tv
+^https?:\/\/(www.ttsp.tv)(?!.*?(/(cdn-cgi)))(?!.*?(\.(css|js|jpeg|jpg|png|gif|ico|mp3|mp4|svg|tff|PNG|woff|woff2|m3u8))).* url script-response-body https://raw.githubusercontent.com/RuCu6/QuanX/main/Scripts/Limbo/Adblock4limbo_qx.js
 
 # 茶杯狐 (https://cupfox.app) //cupfox.app
-^https?:/\/cupfox\.app(\/?$|\/([?]|search).*$) url response-body <head> response-body <head><link rel="stylesheet" href="https://raw.githubusercontent.com/RuCu6/QuanX/main/Css/cupbox.css" type="text/css">
-
-# 哔嘀影视 (https://www.btbdys.com/) //www.btbdys.com
-^https?:\/\/www\.btbdys\.com(\/?$|\/([a-z]+)\/(play\/)?\d+.*$) url response-body <head> response-body <head><link rel="stylesheet" href="https://raw.githubusercontent.com/RuCu6/QuanX/main/Css/bdys.css" type="text/css">
+^https?:/\/cupfox\.app(\/?$|\/([?]|search|list).*$) url response-body <head> response-body <head><link rel="stylesheet" href="https://raw.githubusercontent.com/RuCu6/QuanX/main/Css/cupbox.css" type="text/css">
 
 # Cokemv (https://cokemv.me/) //cokemv.me
 ^https?:/\/cokemv\.me(\/?$|\/([?]|vod).*$) url response-body <head> response-body <head><link rel="stylesheet" href="https://raw.githubusercontent.com/RuCu6/QuanX/main/Css/cokemv.css" type="text/css">
@@ -15,17 +38,11 @@
 # Lezhu (https://www.lezhutv.com) //www.lezhutv.com
 ^https?:/\/www\.lezhutv\.com(\/?$|\/([?]|type|detail|play|index).*$) url response-body <head> response-body <head><link rel="stylesheet" href="https://raw.githubusercontent.com/RuCu6/QuanX/main/Css/lezhu.css" type="text/css">
 
-# bimi (https://www.bimi.net) //www.bimi*.net
+# Bimi (https://www.bimi.net) //www.bimi*.net
 ^https?:/\/www\.bimi.*\.(net\/$|net\/(vodshow|bangumi|type)\/[0-9a-z-\/]+\/$) url response-body <head> response-body <head><link rel="stylesheet" href="https://raw.githubusercontent.com/RuCu6/QuanX/main/Css/bimi.css" type="text/css">
 
 # 555 影视 (https://555dy.vip) //www.o8tv.com, 555dy.vip, www.5*.com, www.5*.cc
 ^https?:\/\/(www\.)?(5.*|o8tv)\.((cc|vip|com)\/$|(cc|vip|com)\/[a-z]+\/[0-9a-z-]+\.html) url response-body <head> response-body <head><link rel="stylesheet" href="https://raw.githubusercontent.com/RuCu6/QuanX/main/Css/555.css" type="text/css">
-
-# 剧迷网 (https://gimytv.app/) //gimytv.app
-^https?:\/\/gimytv\.(app\/$|app\/(browse\/)?[0-9a-zA-Z-_]+\.html) url response-body <head> response-body <head><link rel="stylesheet" href="https://raw.githubusercontent.com/RuCu6/QuanX/main/Css/gimytv.css" type="text/css">
-
-# 低端影视 (https://ddrk.me/) //ddrk.me
-^https:?\/\/ddrk.me.* url response-body <head> response-body <head><link rel="stylesheet" href="https://raw.githubusercontent.com/RuCu6/QuanX/main/Css/ddrk.css" type="text/css">
 
 # 天空影视 (https://www.tkys.tv/) //www.tkys.tv
 ^https?:\/\/www\.tkys\.(tv\/$|tv\/(voddetail|vodplay)\/[0-9a-z-]+\.html$) url response-body <head> response-body <head><link rel="stylesheet" href="https://raw.githubusercontent.com/RuCu6/QuanX/main/Css/tkys.css" type="text/css">
@@ -34,17 +51,6 @@
 ^https?:/\/www\.qianoo\.(cn\/$|cn\/[0-9a-zA-Z_\/]+\.html$) url response-body <head> response-body <head><link rel="stylesheet" href="https://raw.githubusercontent.com/RuCu6/QuanX/main/Css/qianoo.css" type="text/css">
 
 # 真不卡 (https://www.zhenbuka5.com/) //*.zhenbuka*.*
-^https?:\/\/www\.zhenbuka.*\.com(\/?$|\/([?]|vod).*$) url response-body <head> response-body <head><link rel="stylesheet" href="https://raw.githubusercontent.com/RuCu6/QuanX/main/Css/zhenbuka.css" type="text/css">
+^https?:\/\/www\.zhenbuka.*\.com(\/?$|\/([?]|vod|top).*$) url response-body <head> response-body <head><link rel="stylesheet" href="https://raw.githubusercontent.com/RuCu6/QuanX/main/Css/zhenbuka.css" type="text/css">
 
-# 韩剧 TV (https://www.tvn.cc) //*.tvn.cc
-www.tvn.cc url 302 m.tvn.cc
-https://js.tvn.cc/static/cfo.min.js url echo-response * echo-response https://raw.githubusercontent.com/limbopro/Adblock4limbo/main/Adguard/tvn.cfo.min.js
-^https?:\/\/(\w{0,3}(\.){0,1}(tvn)(\.)\w{0,3})(?!.*?(/(cdn-cgi)))(?!.*?(\.(css|js|jpeg|jpg|png|php|gif|ico|mp3|mp4|svg|tff|PNG|woff|woff2|m3u8))).* url script-response-body https://raw.githubusercontent.com/limbopro/Adblock4limbo/main/Adguard/surge_tvn.js
-
-# 梨播 libvio (https://www.libvio.me/ & https://www.libvio.com/) //www.libvio.me
-^https?:/\/www\.libvio\.(me\/$|me\/(detail|play)\/[0-9a-z-]+\.html$) url response-body <head> response-body <head><link rel="stylesheet" href="https://raw.githubusercontent.com/RuCu6/QuanX/main/Css/libvio.css" type="text/css">
-
-# www.ttsp.tv //www.ttsp.tv
-^https?:\/\/(www\.ttsp\.tv)(?!.*?(/(cdn-cgi)))(?!.*?(\.(css|js|jpeg|jpg|png|gif|ico|mp3|mp4|svg|tff|PNG|woff|woff2|m3u8))).* url script-response-body https://raw.githubusercontent.com/RuCu6/QuanX/main/Scripts/Adblock4limbo_qx.js
-
-hostname = cupfox.app, www.btbdys.com, cokemv.me, www.lezhutv.com, www.bimi*.net, www.o8tv.com, 555dy.vip, www.5*.com, www.5*.cc, gimytv.app, ddrk.me, www.tkys.tv, www.qianoo.cn, *.zhenbuka*.*, *.tvn.cc, www.libvio.me, www.ttsp.tv
+hostname = *.gimy.*, ddrk.me, *.btbdys.*, *.duboku.*, *.tvn.cc, www.libvio.com, www.libvio.me, www.ttsp.tv, cupfox.app, cokemv.me, www.lezhutv.com, www.bimi*.net, www.o8tv.com, 555dy.vip, www.5*.com, www.5*.cc, www.tkys.tv, www.qianoo.cn, *.zhenbuka*.*
