--- a/Rewrites/PornPage.conf
+++ b/Rewrites/PornPage.conf
@@ -1,51 +1,51 @@
 # utf-8
-# 2022-07-13 11:18
-# 引用地址 https://github.com/ddgksf2013/Cuttlefish/blob/master/Html/WebAdBlock.conf
+# 2022-07-13 20:55
 # 引用地址 https://github.com/limbopro/Adblock4limbo/blob/main/Adblock4limbo.conf
+# 引用地址 https://github.com/ddgksf2013/Cuttlefish/blob/master/Html/WebAdBlock.conf
 # 引用地址 https://github.com/yqc007/QuantumultX/blob/master/JavDBCrack.js
 # 引用地址 https://github.com/yqc007/QuantumultX/blob/master/PornHubPremiumCrack.js
 
-# JavDB Unlock Premium (https://javdb.com/) //shukego.com, yiliang8888.com, 91mingyang.com, mnter.com
-;^https?:\/\/.+\.com\/api\/v1\/ads$ url reject-200
-;^https?:\/\/.+\.com\/api\/v1\/(movies\/.*\/play|startup) url script-request-header https://raw.githubusercontent.com/RuCu6/QuanX/main/Scripts/Crack/javdb.js
-
-# PornHub (https://cn.pornhub.com) //*.pornhub.com
-^https:\/\/(cn|www)\.pornhub\.com\/_xa\/ads url reject-dict
-^https?:/\/(cn|www)\.pornhub\.com(\/?$|\/([?]|view|video).*$) url response-body <head> response-body <head><link rel="stylesheet" href="https://raw.githubusercontent.com/RuCu6/QuanX/main/Css/pornhub.css" type="text/css">
-# PornHub Unlock Premium //cn.pornhubpremium.com
-;^https?:\/\/cn\.pornhubpremium\.com\/ url script-request-header https://raw.githubusercontent.com/RuCu6/QuanX/main/Scripts/Crack/pornhub.js
-
 # 禁漫天堂 (https://18comic.org) //18comic.org, 18comic.vip
-^https?:\/\/(\w{0,3}(\.){0,1}(18comic)(\.)\w{0,3})(?!.*?(/(cdn-cgi|onclick)))(?!.*?(\.(css|js|jpeg|jpg|png|php|gif|ico|mp3|mp4|svg|tff|PNG|woff|woff2|m3u8))).* url script-response-body https://raw.githubusercontent.com/RuCu6/QuanX/main/Scripts/Adblock4limbo_qx.js
+^https?:\/\/(\w{0,3}(\.){0,1}(18comic)(\.)\w{0,3})(?!.*?(/(cdn-cgi|onclick)))(?!.*?(\.(css|js|jpeg|jpg|png|php|gif|ico|mp3|mp4|svg|tff|PNG|woff|woff2|m3u8))).* url script-response-body https://raw.githubusercontent.com/RuCu6/QuanX/main/Scripts/Limbo/Adblock4limbo_qx.js
 ^https?:\/\/18comic\.(org|vip)\/templates\/frontend\/airav\/js\/jquery.avs.*?\.js.* url reject
 
 # 绅士漫画 (https://www.wnacg.com) //www.wnacg.com, www.wnacg.org
-^https?:\/\/(\w{0,3}(\.){0,1}(wnacg)(\.)\w{0,3})(?!.*?(/(cdn-cgi|onclick)))(?!.*?(\.(css|js|jpeg|jpg|png|php|gif|ico|mp3|mp4|svg|tff|PNG|woff|woff2|m3u8))).* url script-response-body https://raw.githubusercontent.com/RuCu6/QuanX/main/Scripts/Adblock4limbo_qx.js
+^https?:\/\/(\w{0,3}(\.){0,1}(wnacg)(\.)\w{0,3})(?!.*?(/(cdn-cgi|onclick)))(?!.*?(\.(css|js|jpeg|jpg|png|php|gif|ico|mp3|mp4|svg|tff|PNG|woff|woff2|m3u8))).* url script-response-body https://raw.githubusercontent.com/RuCu6/QuanX/main/Scripts/Limbo/Adblock4limbo_qx.js
 
 # Javmost.xyz //www.javmost.xyz, javmost.xyz, www5.javmost.xyz, www5.javmost.com
-^https?:\/\/(\w{0,3}(\.){0,1}(javmost)(\.)\w{0,3})(?!.*?(/(cdn-cgi)))(?!.*?(\.(css|js|jpeg|jpg|png|php|gif|ico|mp3|mp4|svg|tff|PNG|woff|woff2|m3u8))).*  url script-response-body https://raw.githubusercontent.com/limbopro/Adblock4limbo/main/Adguard/surge_javmost.js
+^https?:\/\/(\w{0,3}(\.){0,1}(javmost)(\.)\w{0,3})(?!.*?(/(cdn-cgi)))(?!.*?(\.(css|js|jpeg|jpg|png|php|gif|ico|mp3|mp4|svg|tff|PNG|woff|woff2|m3u8))).*  url script-response-body https://raw.githubusercontent.com/RuCu6/QuanX/main/Scripts/Limbo/javmost_qx.js
 ^https:\/\/suzihaza\.com\/asset\/jquery\/slim-3\.2\.min\.js.* url reject
 
 # www.javbus.com //*.javbus.*
-^https?:\/\/(\w{0,3}(\.){0,1}(javbus)(\.)\w{0,3})(?!.*?(/(cdn-cgi)))(?!.*?(\.(css|js|jpeg|jpg|png|php|gif|ico|mp3|mp4|svg|tff|PNG|woff|woff2|m3u8))).* url script-response-body https://raw.githubusercontent.com/limbopro/Adblock4limbo/main/Adguard/surge_javbus.js
+^https?:\/\/(\w{0,3}(\.){0,1}(javbus)(\.)\w{0,3})(?!.*?(/(cdn-cgi)))(?!.*?(\.(css|js|jpeg|jpg|png|php|gif|ico|mp3|mp4|svg|tff|PNG|woff|woff2|m3u8))).* url script-response-body https://raw.githubusercontent.com/RuCu6/QuanX/main/Scripts/Limbo/javbus_qx.js
 
 # avple.tv //avple.tv
-^https?:\/\/(\w{0,3}(\.){0,1}(avple)(\.)\w{0,3})(?!.*?(/(cdn-cgi)))(?!.*?(\.(css|js|jpeg|jpg|png|php|gif|ico|mp3|mp4|svg|tff|PNG|woff|woff2|m3u8))).* url script-response-body https://raw.githubusercontent.com/limbopro/Adblock4limbo/main/Adguard/surge_avple.js
-
+^https?:\/\/(\w{0,3}(\.){0,1}(avple)(\.)\w{0,3})(?!.*?(/(cdn-cgi)))(?!.*?(\.(css|js|jpeg|jpg|png|php|gif|ico|mp3|mp4|svg|tff|PNG|woff|woff2|m3u8))).* url script-response-body https://raw.githubusercontent.com/RuCu6/QuanX/main/Scripts/Limbo/avple_qx.js
 # Avple 弹窗跳转 //assert.avple.tv
 ^https?:\/\/assert\.avple\.tv\/file\/avple-images\/ad\.js url reject
 
 # jable.tv //jable.tv
-^https?:\/\/(\w{0,3}(\.){0,1}(jable)(\.)\w{0,3})(?!.*?(/(cdn-cgi)))(?!.*?(\.(css|js|jpeg|jpg|png|php|gif|ico|mp3|mp4|svg|tff|PNG|woff|woff2|m3u8))).* url script-response-body https://raw.githubusercontent.com/RuCu6/QuanX/main/Scripts/Adblock4limbo_qx.js
+^https?:\/\/(\w{0,3}(\.){0,1}(jable)(\.)\w{0,3})(?!.*?(/(cdn-cgi)))(?!.*?(\.(css|js|jpeg|jpg|png|php|gif|ico|mp3|mp4|svg|tff|PNG|woff|woff2|m3u8))).* url script-response-body https://raw.githubusercontent.com/RuCu6/QuanX/main/Scripts/Limbo/Adblock4limbo_qx.js
 
-# missav 播放页弹窗 (https://missav.com) //missav.com
-https?:\/\/[0-9a-zA-Z]{10,16}\.cloudfront\.net\/\?[a-z]{3,7}=\d{4,8} url reject
-^https?:\/\/(\w{0,3}(\.){0,1}(missav)(\.)\w{0,3})(?!.*?(/(cdn-cgi)))(?!.*?(\.(css|js|jpeg|jpg|png|php|gif|ico|mp3|mp4|svg|tff|PNG|woff|woff2|m3u8))).* url script-response-body https://raw.githubusercontent.com/RuCu6/QuanX/main/Scripts/Adblock4limbo_qx.js
+# missav 播放页弹窗 (https://missav.com) //*.cloudfront.net, missav.com
+^https?:\/\/[0-9a-zA-Z]{10,16}\.cloudfront\.net\/\?[a-z]{3,7}=\d{4,8} url reject
+^https?:\/\/(\w{0,3}(\.){0,1}(missav)(\.)\w{0,3})(?!.*?(/(cdn-cgi)))(?!.*?(\.(css|js|jpeg|jpg|png|php|gif|ico|mp3|mp4|svg|tff|PNG|woff|woff2|m3u8))).* url script-response-body https://raw.githubusercontent.com/RuCu6/QuanX/main/Scripts/Limbo/Adblock4limbo_qx.js
 
 # 4hu.tv //4hu.*
-^https?:\/\/(\w{0,3}(\.){0,1}(4hu)(\.)\w{0,3})(?!.*?(/(cdn-cgi)))(?!.*?(\.(css|js|jpeg|jpg|png|php|gif|ico|mp3|mp4|svg|tff|PNG|woff|woff2|m3u8))).* url script-response-body https://raw.githubusercontent.com/limbopro/Adblock4limbo/main/Adguard/surge_4hu.js
+^https?:\/\/(\w{0,3}(\.){0,1}(4hu)(\.)\w{0,3})(?!.*?(/(cdn-cgi)))(?!.*?(\.(css|js|jpeg|jpg|png|php|gif|ico|mp3|mp4|svg|tff|PNG|woff|woff2|m3u8))).* url script-response-body https://raw.githubusercontent.com/RuCu6/QuanX/main/Scripts/Limbo/4hu_qx.js
+
+# PornHub (https://cn.pornhub.com) //*.pornhub.com
+^https?:\/\/(\w{0,3}(\.){0,1}(pornhub)(\.)\w{0,3})(?!.*?(/(cdn-cgi)))(?!.*?(\.(css|js|jpeg|jpg|png|gif|ico|mp3|mp4|svg|tff|PNG|woff|woff2|m3u8))).* url script-response-body https://raw.githubusercontent.com/RuCu6/QuanX/main/Scripts/Limbo/pornhub_qx.js
+^https:\/\/cn\.pornhub\.com\/_xa\/ads.* url reject
 
 # www.91porn.com //91porn.com
-^https?:\/\/(\w{0,3}(\.){0,1}(91porn)(\.)\w{0,3})(?!.*?(/(cdn-cgi)))(?!.*?(\.(css|js|jpeg|jpg|png|gif|ico|mp3|mp4|svg|tff|ttf|PNG|woff|woff2|m3u8))).* url script-response-body https://raw.githubusercontent.com/limbopro/Adblock4limbo/main/Adguard/surge_91porn.js
+^https?:\/\/(\w{0,3}(\.){0,1}(91porn)(\.)\w{0,3})(?!.*?(/(cdn-cgi)))(?!.*?(\.(css|js|jpeg|jpg|png|gif|ico|mp3|mp4|svg|tff|ttf|PNG|woff|woff2|m3u8))).* url script-response-body https://raw.githubusercontent.com/RuCu6/QuanX/main/Scripts/Limbo/91porn_qx.js
 
-hostname = *.pornhub.com, 18comic.org, 18comic.vip, www.wnacg.com, www.wnacg.org, www.javmost.xyz, javmost.xyz, www5.javmost.xyz, www5.javmost.com, *.javbus.*, avple.tv, assert.avple.tv, jable.tv, missav.com, 4hu.*, cn.pornhub.com, 91porn.com
+# JavDB Unlock Premium (https://javdb.com/) //shukego.com, yiliang8888.com, 91mingyang.com, mnter.com
+;^https?:\/\/.+\.com\/api\/v1\/ads$ url reject-200
+;^https?:\/\/.+\.com\/api\/v1\/(movies\/.*\/play|startup) url script-request-header https://raw.githubusercontent.com/RuCu6/QuanX/main/Scripts/Limbo/Crack/javdb.js
+
+# PornHub Unlock Premium //cn.pornhubpremium.com
+;^https?:\/\/cn\.pornhubpremium\.com\/ url script-request-header https://raw.githubusercontent.com/RuCu6/QuanX/main/Scripts/Limbo/Crack/pornhub.js
+
+hostname = 18comic.org, 18comic.vip, www.wnacg.com, www.wnacg.org, www.javmost.xyz, javmost.xyz, www5.javmost.xyz, www5.javmost.com, *.javbus.*, avple.tv, assert.avple.tv, jable.tv, *.cloudfront.net, missav.com, 4hu.*, *.pornhub.com, 91porn.com
