--- a/Rewrites/MediaPage.conf
+++ b/Rewrites/MediaPage.conf
@@ -1,10 +1,10 @@
 # utf-8
-# 2022-07-13 21:14
+# 2022-07-13 21:18
 # 引用地址 https://github.com/limbopro/Adblock4limbo/blob/main/Adblock4limbo.conf
 # 引用地址 https://github.com/ddgksf2013/Cuttlefish/blob/master/Html/WebAdBlock.conf
 
-# 剧迷网 (https://gimy.app/, https://gimytv.app/) //*.gimy.*
-^https?:\/\/(\w{0,3}(\.){0,1}(gimy|gimytv)(\.)\w{0,3})(?!.*?(/(cdn-cgi)))(?!.*?(\.(css|js|jpeg|jpg|png|php|gif|ico|mp3|mp4|svg|tff|PNG|woff|woff2|m3u8))).* url script-response-body https://raw.githubusercontent.com/limbopro/Adblock4limbo/main/Adguard/Limbo/gimy_qx.js
+# 剧迷网 (https://gimy.app/, https://gimytv.app/) //*.gimy.*, *.gimytv.*
+^https?:\/\/(\w{0,3}(\.){0,1}(gimy|gimytv)(\.)\w{0,3})(?!.*?(/(cdn-cgi)))(?!.*?(\.(css|js|jpeg|jpg|png|php|gif|ico|mp3|mp4|svg|tff|PNG|woff|woff2|m3u8))).* url script-response-body https://raw.githubusercontent.com/RuCu6/QuanX/main/Scripts/Limbo/gimy_qx.js
 
 # 低端影视 (https://ddrk.me/) //ddrk.me
 ^https?:\/\/(\w{0,3}(\.){0,1}(ddrk)(\.)\w{0,3})(?!.*?(\.webmanifest|/(cdn-cgi)))(?!.*?(\.(css|js|jpeg|jpg|png|php|gif|ico|mp3|mp4|svg|tff|PNG|woff|woff2|m3u8))).* url script-response-body https://raw.githubusercontent.com/RuCu6/QuanX/main/Scripts/Limbo/Adblock4limbo_qx.js
@@ -16,15 +16,15 @@
 ^https?:\/\/(\w{0,3}(\.){0,1}(btbdys)(\.)\w{0,3})(?!.*?(/(cdn-cgi|verifyCode|member\/|zzzzz)))(?!.*?(\.(css|js|jpeg|jpg|png|php|gif|ico|mp3|mp4|svg|tff|PNG|woff|woff2|m3u8|ddr))).* url script-response-body https://raw.githubusercontent.com/RuCu6/QuanX/main/Scripts/Limbo/Adblock4limbo_qx.js
 
 # 独播库 (www.duboku.tv) //*.duboku.*
-^https?:\/\/(\w{0,3}(\.){0,1}(duboku)(\.)\w{0,3})(?!.*?(/(cdn-cgi)))(?!.*?(\.(css|js|jpeg|jpg|png|php|gif|ico|mp3|mp4|svg|tff|PNG|woff|woff2|m3u8))).* url script-response-body https://raw.githubusercontent.com/limbopro/Adblock4limbo/main/Adguard/Limbo/duboku_qx.js
+^https?:\/\/(\w{0,3}(\.){0,1}(duboku)(\.)\w{0,3})(?!.*?(/(cdn-cgi)))(?!.*?(\.(css|js|jpeg|jpg|png|php|gif|ico|mp3|mp4|svg|tff|PNG|woff|woff2|m3u8))).* url script-response-body https://raw.githubusercontent.com/RuCu6/QuanX/main/Scripts/Limbo/duboku_qx.js
 
 # 韩剧 TV (https://www.tvn.cc) //*.tvn.cc
 www.tvn.cc url 302 m.tvn.cc
-https://js.tvn.cc/static/cfo.min.js url echo-response * echo-response https://raw.githubusercontent.com/limbopro/Adblock4limbo/main/Adguard/Limbo/tvn.cfo.min.js
-^https?:\/\/(\w{0,3}(\.){0,1}(tvn)(\.)\w{0,3})(?!.*?(/(cdn-cgi)))(?!.*?(\.(css|js|jpeg|jpg|png|php|gif|ico|mp3|mp4|svg|tff|PNG|woff|woff2|m3u8))).* url script-response-body https://raw.githubusercontent.com/limbopro/Adblock4limbo/main/Adguard/Limbo/surge_tvn.js
+https://js.tvn.cc/static/cfo.min.js url echo-response * echo-response https://raw.githubusercontent.com/RuCu6/QuanX/main/Scripts/Limbo/tvn.cfo.min.js
+^https?:\/\/(\w{0,3}(\.){0,1}(tvn)(\.)\w{0,3})(?!.*?(/(cdn-cgi)))(?!.*?(\.(css|js|jpeg|jpg|png|php|gif|ico|mp3|mp4|svg|tff|PNG|woff|woff2|m3u8))).* url script-response-body https://raw.githubusercontent.com/RuCu6/QuanX/main/Scripts/Limbo/surge_tvn.js
 
 # 梨播 libvio (https://www.libvio.com/, https://www.libvio.me) //www.libvio.com, www.libvio.me
-^https?:\/\/(\w{0,3}(\.){0,1}(libvio)(\.)\w{0,3})(?!.*?(/(cdn-cgi)))(?!.*?(\.(css|js|jpeg|jpg|png|php|gif|ico|mp3|mp4|svg|tff|PNG|woff|woff2|m3u8))).* url script-response-body https://raw.githubusercontent.com/limbopro/Adblock4limbo/main/Adguard/Limbo/libvio_qx.js
+^https?:\/\/(\w{0,3}(\.){0,1}(libvio)(\.)\w{0,3})(?!.*?(/(cdn-cgi)))(?!.*?(\.(css|js|jpeg|jpg|png|php|gif|ico|mp3|mp4|svg|tff|PNG|woff|woff2|m3u8))).* url script-response-body https://raw.githubusercontent.com/RuCu6/QuanX/main/Scripts/Limbo/libvio_qx.js
 
 # 天天视频 (www.ttsp.tv) //www.ttsp.tv
 ^https?:\/\/(www.ttsp.tv)(?!.*?(/(cdn-cgi)))(?!.*?(\.(css|js|jpeg|jpg|png|gif|ico|mp3|mp4|svg|tff|PNG|woff|woff2|m3u8))).* url script-response-body https://raw.githubusercontent.com/RuCu6/QuanX/main/Scripts/Limbo/Adblock4limbo_qx.js
@@ -53,4 +53,4 @@ https://js.tvn.cc/static/cfo.min.js url echo-response * echo-response https://ra
 # 真不卡 (https://www.zhenbuka5.com/) //*.zhenbuka*.*
 ^https?:\/\/www\.zhenbuka.*\.com(\/?$|\/([?]|vod|top).*$) url response-body <head> response-body <head><link rel="stylesheet" href="https://raw.githubusercontent.com/RuCu6/QuanX/main/Css/zhenbuka.css" type="text/css">
 
-hostname = *.gimy.*, ddrk.me, *.btbdys.*, *.duboku.*, *.tvn.cc, www.libvio.com, www.libvio.me, www.ttsp.tv, cupfox.app, cokemv.me, www.lezhutv.com, www.bimi*.net, www.o8tv.com, 555dy.vip, www.5*.com, www.5*.cc, www.tkys.tv, www.qianoo.cn, *.zhenbuka*.*
+hostname = *.gimy.*, *.gimytv.*, ddrk.me, *.btbdys.*, *.duboku.*, *.tvn.cc, www.libvio.com, www.libvio.me, www.ttsp.tv, cupfox.app, cokemv.me, www.lezhutv.com, www.bimi*.net, www.o8tv.com, 555dy.vip, www.5*.com, www.5*.cc, www.tkys.tv, www.qianoo.cn, *.zhenbuka*.*
