--- a/Rewrites/PornPage.conf
+++ b/Rewrites/PornPage.conf
@@ -1,5 +1,5 @@
 # utf-8
-# 2022-07-13 21:32
+# 2022-07-13 21:43
 # 引用地址 https://github.com/limbopro/Adblock4limbo/blob/main/Adblock4limbo.conf
 # 引用地址 https://github.com/ddgksf2013/Cuttlefish/blob/master/Html/WebAdBlock.conf
 # 引用地址 https://github.com/yqc007/QuantumultX/blob/master/JavDBCrack.js
@@ -45,7 +45,7 @@
 ^https?:\/\/.+\.com\/api\/v\d\/ads$ url reject-200
 ^https?:\/\/.+\.com\/api\/v\d\/(movies\/.*\/play|startup) url script-request-header https://raw.githubusercontent.com/RuCu6/QuanX/main/Scripts/Crack/javdb.js
 
-# PornHub Unlock Premium //cn.pornhubpremium.com
-^https?:\/\/cn\.pornhubpremium\.com\/ url script-request-header https://raw.githubusercontent.com/RuCu6/QuanX/main/Scripts/Crack/pornhub.js
+# PornHub Unlock Premium //*.pornhubpremium.com
+^https?:\/\/(www|cn)\.pornhubpremium\.com\/ url script-request-header https://raw.githubusercontent.com/RuCu6/QuanX/main/Scripts/Crack/pornhub.js
 
-hostname = 18comic.org, 18comic.vip, www.wnacg.com, www.wnacg.org, www.javmost.xyz, javmost.xyz, www5.javmost.xyz, www5.javmost.com, *.javbus.*, avple.tv, assert.avple.tv, jable.tv, *.cloudfront.net, missav.com, 4hu.*, *.pornhub.com, 91porn.com, shukego.com, yiliang8888.com, 91mingyang.com, mnter.com, cn.pornhubpremium.com
+hostname = 18comic.org, 18comic.vip, www.wnacg.com, www.wnacg.org, www.javmost.xyz, javmost.xyz, www5.javmost.xyz, www5.javmost.com, *.javbus.*, avple.tv, assert.avple.tv, jable.tv, *.cloudfront.net, missav.com, 4hu.*, *.pornhub.com, 91porn.com, shukego.com, yiliang8888.com, 91mingyang.com, mnter.com, *.pornhubpremium.com
